@@ -13,6 +13,7 @@ export(convertDataFrameCols)
 export(convertDfCols)
 export(convertInteger)
 export(convertIntegers)
+export(convertRowsToList)
 export(convertToShortString)
 export(dropColumns)
 export(extractSubList)
